bugfix: CHRNS-68: header: search field overlapping

--- a/src/app/_core/layout/layout-header/layout-header.component.scss
+++ b/src/app/_core/layout/layout-header/layout-header.component.scss
@@ -43,6 +43,7 @@ $layout-header--height: 64px;
   cursor: pointer;
   display: flex;
   height: 40px;
+  max-width: initial;
   width: 147px;
 }
 
